--- a/api-reference/access/overview.mdx
+++ b/api-reference/access/overview.mdx
@@ -6,7 +6,7 @@ description: "Proxied access to OnlyFans data with automatic session management"
 
 The Access API provides managed endpoints for common operations and proxy endpoints for any OnlyFans API path. OFAuth handles request signing, session management, and retries automatically.
 
-<Card title="Access Guide" icon="book" href="/guides/access">
+<Card title="Access Guide" icon="book" href="/reference/access">
   Complete guide with authentication, endpoints, media proxy, rate limiting, and troubleshooting
 </Card>
 
