--- a/api-reference/access/proxy.mdx
+++ b/api-reference/access/proxy.mdx
@@ -261,7 +261,7 @@ OFAuth rate limits are separate from OnlyFans' native rate limits. You may still
 Authenticate users and get connection IDs
 </Card>
 
-<Card title="Access Guide" href="/guides/access">
+<Card title="Access Guide" href="/reference/access">
 Detailed guide with examples and best practices
 </Card>
 </CardGroup>
