--- a/api-reference/link/init.mdx
+++ b/api-reference/link/init.mdx
@@ -24,7 +24,7 @@ Content-Type: application/json
 | `connectionId` | `string` | No | Provide an existing connection ID to reconnect/re-authenticate that specific connection. |
 
 <Info>
-The `redirectUrl` must be pre-registered in your [OFAuth dashboard](https://ofauth.com) under Developers → API → Allowed Redirect URIs.
+The `redirectUrl` must be pre-registered in your [OFAuth dashboard](https://app.ofauth.com) under Developers → API → Allowed Redirect URIs.
 </Info>
 
 ## Response
