--- a/getting-started/concepts.mdx
+++ b/getting-started/concepts.mdx
@@ -150,7 +150,7 @@ Yes! OFAuth provides REST APIs that work with any language. We also offer:
 - **TypeScript SDK** - Full-featured SDK with type safety
 - **REST APIs** - Use from Python, Go, PHP, Ruby, or anything that makes HTTP requests
 
-Check [Choose Your Path](/getting-started/choose-your-path) to pick the best approach for your stack.
+Check the [SDK documentation](/sdk) for TypeScript or use the REST API directly for other languages.
 </Accordion>
 
 <Accordion title="Is my users' data stored by OFAuth?">
@@ -192,11 +192,11 @@ See [Production Considerations](/getting-started/production-considerations) for 
 ## Next Steps
 
 <CardGroup cols={2}>
-	<Card title="Quick Start" icon="rocket" href="/getting-started/quickstart/index">
-		Jump into a hands-on tutorial (10 minutes)
+	<Card title="2-Minute Quickstart" icon="rocket" href="/quickstart">
+		Get your first API call working fast
 	</Card>
-	<Card title="Choose Your Path" icon="route" href="/getting-started/choose-your-path">
-		Pick the right integration approach for your stack
+	<Card title="Use Cases" icon="boxes" href="/use-cases/messaging">
+		Explore what you can build
 	</Card>
 </CardGroup>
 
