--- a/getting-started/production-considerations.mdx
+++ b/getting-started/production-considerations.mdx
@@ -171,7 +171,7 @@ Building production OnlyFans integrations means working with an API that was nev
 	<Card title="Implementation Guides" icon="code" href="/guides/link/overview">
 		Review specific API implementation patterns with reliability in mind
 	</Card>
-	<Card title="Webhooks" icon="chart-line" href="/guides/webhooks">
+	<Card title="Webhooks" icon="chart-line" href="/reference/webhooks">
 		Set up webhooks for connection monitoring
 	</Card>
 	<Card title="Support Resources" icon="life-ring" href="mailto:support@ofauth.com">
