--- a/getting-started/quick-reference.mdx
+++ b/getting-started/quick-reference.mdx
@@ -125,7 +125,7 @@ Rate limits are per connection ID. Each connection has independent limits.
 ## Webhook Events
 
 <Info>
-  Webhooks are configured through the [OFAuth Dashboard](https://ofauth.com/platform/settings), not via API.
+  Webhooks are configured through the [OFAuth Dashboard](https://app.ofauth.com/platform/developers/webhooks), not via API.
 </Info>
 
 | Event | Trigger |
@@ -159,7 +159,7 @@ Rate limits are per connection ID. Each connection has independent limits.
 | **Managed Endpoints** | Stable, typed Access API routes |
 | **Proxy Endpoints** | Raw passthrough to any OnlyFans API path |
 
-<Card title="Full Glossary" icon="book" href="/getting-started/concepts#glossary">
+<Card title="Full Glossary" icon="book" href="/overview/how-it-works#glossary">
   Complete terminology and definitions
 </Card>
 
@@ -204,11 +204,11 @@ const userData = await response.json()
 ## Related Resources
 
 <CardGroup cols={3}>
-	<Card title="Core Concepts" icon="lightbulb" href="/getting-started/concepts">
+	<Card title="How It Works" icon="lightbulb" href="/overview/how-it-works">
 		Understand how OFAuth works
 	</Card>
-	<Card title="Quick Start" icon="rocket" href="/getting-started/quickstart/index">
-		Step-by-step tutorial
+	<Card title="Quickstart" icon="rocket" href="/quickstart">
+		Get started in 2 minutes
 	</Card>
 	<Card title="API Reference" icon="book" href="/api-reference/access/overview">
 		Full endpoint documentation
