--- a/guides/dynamic-rules.mdx
+++ b/guides/dynamic-rules.mdx
@@ -4,7 +4,7 @@ description: "Current signing parameters required for OnlyFans API authenticatio
 ---
 
 <Warning>
-	**Most integrations don't need Dynamic Rules.** If you're using the [Access API](/guides/access) or [TypeScript SDK](/sdk), request signing is handled automatically. Only read this guide if you're making direct requests to OnlyFans APIs.
+	**Most integrations don't need Dynamic Rules.** If you're using the [Access API](/reference/access) or [TypeScript SDK](/sdk), request signing is handled automatically. Only read this guide if you're making direct requests to OnlyFans APIs.
 </Warning>
 
 ## Overview
@@ -12,7 +12,7 @@ description: "Current signing parameters required for OnlyFans API authenticatio
 The Dynamic Rules API (`/v2/dynamic-rules`) provides the current signing parameters required to generate valid signatures for OnlyFans API requests. OnlyFans requires cryptographically signed requests and **changes their signing requirements very frequently** - sometimes multiple times per day.
 
 <CardGroup cols={2}>
-	<Card title="Use the Access API Instead" icon="rocket" href="/guides/access">
+	<Card title="Use the Access API Instead" icon="rocket" href="/reference/access">
 		Automatic signing, no maintenance required. **Recommended for most use cases.**
 	</Card>
 	<Card title="Use the TypeScript SDK" icon="code" href="/sdk">
@@ -848,7 +848,7 @@ If you're migrating from a legacy signing implementation:
 	<Card title="Link API" icon="link" href="/api-reference/link/overview">
 		Establish user connections for signing
 	</Card>
-	<Card title="Connections" icon="user" href="/guides/connections">
+	<Card title="Connections" icon="user" href="/reference/connections">
 		Manage connection lifecycle
 	</Card>
 </CardGroup>
