--- a/guides/link/embed.mdx
+++ b/guides/link/embed.mdx
@@ -498,7 +498,7 @@ useEffect(() => {
 	<Card title="API Reference" icon="code" href="/api-reference/link">
 		Detailed API documentation for Link endpoints
 	</Card>
-	<Card title="Access API" icon="key" href="/guides/access">
+	<Card title="Access API" icon="key" href="/reference/access">
 		Use connection IDs to access OnlyFans data
 	</Card>
 </CardGroup> 
