--- a/guides/link/hosted.mdx
+++ b/guides/link/hosted.mdx
@@ -452,7 +452,7 @@ User is redirected with `?status=error&error_code=invalid_credentials`
 	<Card title="Access API" icon="key" href="/api-reference/access/overview">
 		Use connection IDs to access OnlyFans data
 	</Card>
-	<Card title="Webhooks" icon="webhook" href="/guides/webhooks">
+	<Card title="Webhooks" icon="webhook" href="/reference/webhooks">
 		Get notified of connection events
 	</Card>
 </CardGroup>
