--- a/reference/error-handling.mdx
+++ b/reference/error-handling.mdx
@@ -183,10 +183,10 @@ Handle rate limits by adopting exponential backoff. Read the `X-RateLimit-Retry-
   <Card title="Rate Limiting" icon="gauge" href="/reference/rate-limiting">
     Token bucket system and backoff strategies
   </Card>
-  <Card title="Access Guide" icon="key" href="/guides/access">
+  <Card title="Access Guide" icon="key" href="/reference/access">
     Using the Access API
   </Card>
-  <Card title="Quick Start" icon="rocket" href="/getting-started/quickstart/index">
+  <Card title="Quickstart" icon="rocket" href="/quickstart">
     Get started with OFAuth
   </Card>
 </CardGroup>
