--- a/reference/rate-limiting.mdx
+++ b/reference/rate-limiting.mdx
@@ -77,7 +77,7 @@ Contact support with:
   <Card title="Error Handling" icon="exclamation-triangle" href="/reference/error-handling">
     Error codes and debugging strategies
   </Card>
-  <Card title="Access Guide" icon="key" href="/guides/access">
+  <Card title="Access Guide" icon="key" href="/reference/access">
     Using the Access API
   </Card>
 </CardGroup>
