--- a/sdk/modules/messaging.mdx
+++ b/sdk/modules/messaging.mdx
@@ -47,7 +47,7 @@ const { data, error } = await sdk.messages.sendChatMessage({
 </ParamField>
 
 <ParamField path="params.text" type="string" required>
-  Message text content (supports markdown)
+  Message text content ([supports markdown](/guides/how-to/text-formatting))
 </ParamField>
 
 <ParamField path="params.mediaItems" type="string[]">
@@ -242,7 +242,7 @@ const { data, error } = await sdk.messages.unsendQueueMessage({
   <Card title="Message Quality" icon="heart">
     **Engaging Content**
     
-    - Use markdown formatting for rich text
+    - Use [markdown formatting](/guides/how-to/text-formatting) for rich text
     - Include relevant media
     - Personalize messages when possible
     - Test pricing strategies
