--- a/guides/link/overview.mdx
+++ b/guides/link/overview.mdx
@@ -1,40 +1,26 @@
 ---
-title: "Overview"
-description: "Authentication solutions for OnlyFans integration"
+title: "Link Authentication"
+description: "Secure OnlyFans account authentication"
 ---
 
-The Link API (`/v2/link`) centers on hosted authentication experiences that keep user credentials away from your infrastructure:
-
-- **Hosted Redirect**: Send users to OFAuth's secure authentication pages
-- **Link Embed**: Present the hosted flow in a popup or iframe so users remain in your product
-
-<Info>
-	**Using Node.js?** Our [OnlyFans SDK](/sdk) provides convenient wrapper methods for Link authentication with built-in error handling and TypeScript support. Perfect for building robust authentication flows.
-</Info>
-
-<Info>
-	**Production Deployment?** Review our [Production Considerations](/getting-started/production-considerations) guide for critical information about building reliable OnlyFans integrations.
-</Info>
+The Link API provides secure, hosted authentication for connecting OnlyFans accounts. Users authenticate on OFAuth's pages—you receive a connection ID for API access.
 
 ## Choose Your Integration
 
 <CardGroup cols={2}>
-	<Card title="Hosted Mode" icon="external-link" href="/guides/link/hosted">
-		Simple redirect-based authentication flow.
-		**Available immediately** to all users.
-	</Card>
-	<Card title="Link Embed" icon="window" href="/guides/link/embed">
-		Drop-in popup components for seamless authentication without redirects.
-		**Best user experience**.
-	</Card>
+  <Card title="Redirect Flow" icon="external-link" href="/guides/link/hosted">
+    Redirect users to OFAuth's authentication pages. Simple to implement.
+  </Card>
+  <Card title="Embed Popup" icon="window" href="/guides/link/embed">
+    Show authentication in a popup. Best user experience.
+  </Card>
 </CardGroup>
 
-## Why Hosted First
+## Getting Started
 
-- Launch quickly without building authentication UI from scratch
-- Offload credential handling and security controls to OFAuth
-- Maintain a consistent, optimized experience across devices
-- Upgrade to the embed flow later without changing server code
+<Card title="Connect an Account" icon="plug" href="/guides/how-to/connect-account">
+  Step-by-step tutorial to connect your first OnlyFans account
+</Card>
 
 ## Base URL
 
@@ -42,151 +28,9 @@ The Link API (`/v2/link`) centers on hosted authentication experiences that keep
 https://api.ofauth.com/v2/link
 ```
 
-## Authentication
+## Why Hosted Authentication?
 
-All Link API requests require your API key:
-
-```http
-apikey: YOUR_API_KEY
-```
-
-## Core Flow Overview
-
-1. **Initialize** a hosted session
-2. **Redirect or Embed** the hosted UI
-3. **Handle** success and cancellation callbacks
-4. **Verify** session status server-side
-5. **Store** the connection ID for API access
-
-<Tip>
-**Billing:** You're only charged for active connections. Expired connections don't count toward your monthly usage—billing resumes only if the user re-authenticates.
-</Tip>
-
-## Permission Requirements
-
-<Info>
-**Understanding Permissions:**
-- **Hosted Mode**: Available to all users immediately
-- **Link Embed**: Included with hosted mode, no extra approval required
-
-Most applications should start with **Hosted Mode** for the fastest implementation.
-
-Looking for more control? [Enterprise Whitelabel](/enterprise/whitelabel) mode is available for approved partners.
-</Info>
-
-## Implementation Examples
-
-### Quick Start with Hosted Mode
-
-```javascript
-// 1. Initialize session
-const response = await fetch("https://api.ofauth.com/v2/link/init", {
-	method: "POST",
-	headers: {
-		apikey: "YOUR_API_KEY",
-		"Content-Type": "application/json"
-	},
-	body: JSON.stringify({
-		mode: "hosted",
-		hosted: {
-			returnUrl: "https://yourapp.com/cancel",
-			successUrl: "https://yourapp.com/success?connection={CONNECTION_ID}"
-		}
-	})
-})
-
-const { url } = await response.json()
-
-// 2. Redirect user
-window.location.href = url
-```
-
-The success URL supports an optional `{CONNECTION_ID}` placeholder. When the user
-finishes linking, OFAuth replaces this token with the actual connection ID before
-redirecting or posting a success message to your application.
-
-## Security Best Practices
-
-<CardGroup cols={2}>
-	<Card title="Server-Side Verification" icon="shield-check">
-		Always verify session status server-side, never trust client-side data
-	</Card>
-	<Card title="HTTPS Only" icon="lock">
-		Use HTTPS for all redirect URLs and API communications
-	</Card>
-	<Card title="Session Expiry" icon="clock">
-		Link sessions expire after 1 hour for security
-	</Card>
-	<Card title="Credential Handling" icon="database">
-		Let OFAuth collect credentials through the hosted flow; never request them directly
-	</Card>
-</CardGroup>
-
-## Platform Settings
-
-Security-sensitive behavior is controlled from your OFAuth dashboard:
-
-- Allowed Origins: controls which web origins can embed the hosted Link page (enforced via CSP `frame-ancestors`)
-- Allowed Redirect URIs: exact URLs the hosted flow may redirect to on success or cancel
-
-See the detailed guides for configuration steps:
-
-<CardGroup cols={2}>
-	<Card title="Allowed Origins" icon="shield-check" href="/guides/link/embed#security:-allowed-origins-&-csp">
-		Configure trusted embed origins
-	</Card>
-	<Card title="Allowed Redirect URIs" icon="link" href="/guides/link/hosted#security:-allowed-redirect-uris">
-		Whitelist redirect URLs
-	</Card>
-</CardGroup>
-
-## Common Error Patterns
-
-<AccordionGroup>
-
-<Accordion title="Session Expired">
-	All sessions expire after 1 hour. Create a new session if you encounter
-	expiration errors.
-</Accordion>
-
-</AccordionGroup>
-
-## Getting Started
-
-<Steps>
-	<Step title="Choose Hosted Flow">
-		Decide between redirect and embedded experiences
-	</Step>
-	<Step title="Configure Success Paths">
-		Provide success and cancel URLs so your app can react to outcomes
-	</Step>
-	<Step title="Follow the Guide">
-		Use the detailed hosted integration guide for step-by-step instructions
-	</Step>
-	<Step title="Test Integration">
-		Use test API keys and demo credentials for development
-	</Step>
-</Steps>
-
-## Next Steps
-
-<CardGroup cols={2}>
-	<Card
-		title="Hosted Mode Guide"
-		icon="external-link"
-		href="/guides/link/hosted">
-		Complete guide for redirect-based authentication
-	</Card>
-	<Card
-		title="Link Embed Guide"
-		icon="window"
-		href="/guides/link/embed">
-		Drop-in components for seamless popup authentication
-	</Card>
-	<Card title="Access API" icon="key" href="/guides/access">
-		Use connection IDs to access OnlyFans data
-	</Card>
-	<Card title="Going to Production" icon="shield" href="/getting-started/production-considerations">
-		Critical reliability and risk management information
-	</Card>
-</CardGroup>
+- **No credential handling** - OFAuth manages login securely
+- **Automatic 2FA/captcha** - All challenges handled for you
+- **Quick integration** - Works in minutes, not days
+- **Consistent experience** - Optimized across all devices
