--- a/sdk/index.mdx
+++ b/sdk/index.mdx
@@ -9,7 +9,7 @@ description: "The easiest way to integrate OnlyFans into your JavaScript/TypeScr
 Production-ready TypeScript SDK that eliminates 90% of OnlyFans integration complexity. Full type safety, automatic error handling, and built-in retry logic.
 
 <Info>
-	**Using Python, Go, PHP, or another language?** Use our [REST APIs](/guides/access) directly - they work with any language that can make HTTP requests. This SDK documentation covers TypeScript/JavaScript only.
+	**Using Python, Go, PHP, or another language?** Use our [REST APIs](/reference/access) directly - they work with any language that can make HTTP requests. This SDK documentation covers TypeScript/JavaScript only.
 </Info>
 
 ### Development ROI
@@ -50,7 +50,7 @@ Choose the SDK if you're using TypeScript/JavaScript. Use the REST API directly 
   <Card title="SDK Quickstart" icon="code" href="/sdk/quickstart">
     Get started with the TypeScript SDK
   </Card>
-  <Card title="REST API Guide" icon="globe" href="/guides/access">
+  <Card title="REST API Guide" icon="globe" href="/reference/access">
     Use the API directly from any language
   </Card>
 </CardGroup>
