--- a/sdk/modules/authentication/link-authentication.mdx
+++ b/sdk/modules/authentication/link-authentication.mdx
@@ -517,10 +517,10 @@ async function storeSession(userId: string, session: any) {
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Connection Management" icon="link" href="/sdk/link-connections">
+  <Card title="Connection Management" icon="link" href="/sdk/modules/authentication/link-connections">
     Learn how to manage active OnlyFans connections
   </Card>
-  <Card title="User Management" icon="user" href="/sdk/user-management">
+  <Card title="User Management" icon="user" href="/sdk/modules/user-management">
     Start making authenticated API calls to manage users and profiles
   </Card>
 </CardGroup> 
