--- a/sdk/modules/authentication/link-connections.mdx
+++ b/sdk/modules/authentication/link-connections.mdx
@@ -602,10 +602,10 @@ if (connectionId) {
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="User Management" icon="user" href="/sdk/user-management">
+  <Card title="User Management" icon="user" href="/sdk/modules/user-management">
     Learn how to manage user profiles and data using active connections
   </Card>
-  <Card title="Messaging" icon="message-circle" href="/sdk/messaging">
+  <Card title="Messaging" icon="message-circle" href="/sdk/modules/messaging">
     Start sending messages and managing conversations
   </Card>
 </CardGroup> 
