fix: document required scopes per api

--- a/api-reference/access/overview.mdx
+++ b/api-reference/access/overview.mdx
@@ -24,6 +24,8 @@ apikey: YOUR_API_KEY
 x-connection-id: conn_abc123
 ```
 
+**Required Scope:** `ACCESS`
+
 <CardGroup cols={2}>
   <Card title="Proxy Endpoints" icon="shuffle" href="/api-reference/access/proxy">
     Passthrough to any OnlyFans path
