--- a/api-reference/dynamic-rules/overview.mdx
+++ b/api-reference/dynamic-rules/overview.mdx
@@ -106,6 +106,8 @@ GET /v2/dynamic-rules/status
 apikey: YOUR_API_KEY
 ```
 
+**Required Scope:** `RULES`
+
 ## Access Tiers
 
 | Tier | Description |
