--- a/api-reference/link/overview.mdx
+++ b/api-reference/link/overview.mdx
@@ -24,6 +24,8 @@ The Link API handles user authentication through hosted flows. Users authenticat
 apikey: YOUR_API_KEY
 ```
 
+**Required Scope:** `LINK`
+
 <CardGroup cols={2}>
   <Card title="Hosted Mode" icon="external-link" href="/guides/link/hosted">
     Redirect-based authentication
